fix heatmap/image misalign, * server API, example

--- a/styles/heatmap.css
+++ b/styles/heatmap.css
@@ -8,11 +8,10 @@
 #heatmap{
   left: 0px;
   top: 0px;
+  position: absolute;
   /*position: relative; this will make the heatmap non-interactive*/
   /*z-index: -1;*/
   mix-blend-mode: overlay; /* this is important */
-
-  /*display: none;*/
 }
 #imtest {
   position: absolute;
